[gd_scene load_steps=9 format=3 uid="uid://41ymy5j50iwy"]

[ext_resource type="Theme" uid="uid://yhnx08vjtvl6" path="res://assets/Themes/main.tres" id="1_hirhw"]
[ext_resource type="Script" path="res://scene/UserInterface/AudioSettings/option_settings.gd" id="2_xydrn"]
[ext_resource type="Texture2D" uid="uid://dpcgdvwb3u13o" path="res://assets/Sprites/game_buttons.png" id="3_nlh20"]
[ext_resource type="PackedScene" uid="uid://ckoro2b7vvppq" path="res://scene/UserInterface/AudioSettings/volume_slider.tscn" id="4_t6u7w"]
[ext_resource type="Texture2D" uid="uid://b1sfbvo6lxvrf" path="res://assets/bg2.png" id="4_xv5ul"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g21ob"]
atlas = ExtResource("3_nlh20")
region = Rect2(669.041, 96.6162, 46.2733, 47.4179)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_d6x01"]
atlas = ExtResource("3_nlh20")
region = Rect2(668.865, 227.027, 46.3503, 46.9185)
filter_clip = true

[sub_resource type="AtlasTexture" id="AtlasTexture_jxntr"]
atlas = ExtResource("3_nlh20")
region = Rect2(668.865, 227.027, 46.3503, 46.9185)
filter_clip = true

[node name="OptionSettings" type="Control"]
texture_filter = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hirhw")
script = ExtResource("2_xydrn")

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 96.0
offset_bottom = 96.0
texture_normal = SubResource("AtlasTexture_g21ob")
texture_pressed = SubResource("AtlasTexture_d6x01")
texture_hover = SubResource("AtlasTexture_jxntr")
stretch_mode = 5

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -992.0
offset_top = 24.0
offset_right = -16.0
offset_bottom = 632.0
grow_horizontal = 0
texture = ExtResource("4_xv5ul")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -248.0
offset_right = 408.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme_override_font_sizes/font_size = 34
text = "Music:"

[node name="MusicSlider" parent="Background/VBoxContainer/HBoxContainer" instance=ExtResource("4_t6u7w")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
theme_override_font_sizes/font_size = 34
text = "Effect:"

[node name="EffectSlider" parent="Background/VBoxContainer/HBoxContainer2" instance=ExtResource("4_t6u7w")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="Background/VBoxContainer/HBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Background/VBoxContainer/HBoxContainer2/EffectSlider" to="." method="_on_effect_slider_value_changed"]
